Updated wine lists view delete mode to use styled image checkbox.